correction overflow 5

--- a/main.scss
+++ b/main.scss
@@ -43,8 +43,8 @@ h6 {
 }
 
 html, body {
-  position:relative;
-  overflow-x:hidden !important;
+  position: relative;
+  overflow-x: hidden;
 }
 
 body {
